--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "axios": "^0.19.2",
         "bootstrap": "^4.3.1",
         "css-loader": "^3.5.3",
+        "emailjs-com": "^3.2.0",
         "express": "^4.17.1",
         "firebase": "^10.3.0",
         "fslightbox-react": "1.2.0",
