updates google map

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 REACT_APP_EMAILJS_USER_ID=YourEmailJsUserId
 REACT_APP_EMAILJS_TEMPLATE_ID=YourEmailJsTemplateId
 REACT_APP_EMAILJS_API_KEY=YourEmailJsApiKey
+
+REACT_APP_GOOGLE_MAPS_API_KEY=YourGoogleMapsApiKey
